--- a/public/resources/css/blog.css
+++ b/public/resources/css/blog.css
@@ -22,3 +22,33 @@
     font-size: 80px;
     font-weight: 800;
 }
+
+.post{
+    width: 730px;
+    margin: 10px auto;
+    padding: 25px;
+    padding-left: 30px;
+    box-shadow:  1px 1px 10px 0 rgba(32,33,36, 0.1);
+}
+
+.post__header{
+    margin-bottom: 10px;
+}
+
+.post .post__header h3{
+   font-family: 'Open Sans', sans-serif;
+   font-size: 36px;
+   font-weight: 800;
+   line-height: 1; 
+   margin-bottom: 10px;
+   color: #0e293c;
+}
+
+.post .post__header h4{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: normal;
+    font-style: italic;
+    font-size: 14px;
+    line-height: 1.5;
+    color:#999;
+}
