--- a/public/resources/css/blog.css
+++ b/public/resources/css/blog.css
@@ -52,3 +52,10 @@
     line-height: 1.5;
     color:#999;
 }
+
+.post__content p{
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    text-align: justify;
+    text-indent: 50px;
+}
